# Jclaw

./: .gitignore  CLAUDE.md  DECISIONS.md  LICENSE  README.md
.github/hooks/: pre-push
.github/workflows/: release.yml  rust-ci.yml
.omo/run-continuation/: ses_08a7eae2effeQ437dfQd337Prx.json  ses_08ae60877ffep5GuL1rVK5B0Lg.json  ses_08af48112ffezN5qoXskyHyy4B.json  ses_08afd12e5ffen7p5EGz409SRMg.json  ses_08b03cffeffe2ueYIl3x0zvsCD.json  ses_08b05d7d2ffeWHOLh6YVfSSGhQ.json
docs/superpowers/plans/: 2026-07-10-windows-one-click-installer.md
docs/superpowers/specs/: 2026-07-09-worldsmith-agent-design.md
installer/: jclaw.iss
rust/: .gitignore  Cargo.toml  README.md
rust/crates/api/src/: lib.rs  prompt_cache.rs  sse.rs
rust/crates/api/src/providers/: anthropic.rs  mod.rs  openai_compat.rs
rust/crates/api/tests/: client_integration.rs
rust/crates/claw-rag-service/src/: ingest.rs
rust/crates/commands/src/: lib.rs
rust/crates/mock-anthropic-service/src/: lib.rs
rust/crates/plugins/src/: lib.rs  test_isolation.rs
rust/crates/runtime/: Cargo.toml
rust/crates/runtime/src/: config.rs  file_ops.rs  lane_events.rs  lib.rs  mcp_stdio.rs  mcp_tool_bridge.rs  oauth.rs  permission_enforcer.rs  permissions.rs  prompt.rs  session.rs  session_control.rs  summary_compression.rs  trident.rs
rust/crates/rusty-claude-cli/: Cargo.toml
rust/crates/rusty-claude-cli/src/: init.rs  input.rs  lib.rs  main.rs  render.rs  setup_wizard.rs  tui.rs  update.rs
rust/crates/rusty-claude-cli/tests/: cli_flags_and_config_defaults.rs  compact_output.rs  output_format_contract.rs
rust/crates/tools/: Cargo.toml
rust/crates/tools/src/: card_tools.rs  lane_completion.rs  lib.rs
scripts/: check-version-matches-tag.sh  install-jclaw.sh
tests/: test_version_tag_contract.py
tui/: .gitignore  HANDOFF.md  package.json
