[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.2.0-beta.5"
edition = "2021"
license = "MIT"
publish = false

[workspace.dependencies]
serde_json = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "allow", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
