[package]
name = "rusty-claude-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "claw"
path = "src/main.rs"

# Character-card authoring variant. Same binary/TUI as `claw`; the persona and
# default tool surface switch on the executable name at runtime (see
# `janitor_mode()` in src/main.rs).
[[bin]]
name = "claw-janitor"
path = "src/main.rs"

# Primary jclaw command: the card-author variant under the project's own name.
# `jclaw tui` launches the vendored full-screen TUI (see src/tui.rs).
[[bin]]
name = "jclaw"
path = "src/main.rs"

[dependencies]
api = { path = "../api" }
commands = { path = "../commands" }
crossterm = "0.28"
pulldown-cmark = "0.13"
rustyline = "15"
runtime = { path = "../runtime" }
plugins = { path = "../plugins" }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
syntect = "5"
tokio = { version = "1", features = ["rt-multi-thread", "signal", "time"] }
tools = { path = "../tools" }
log = "0.4"


[lints]
workspace = true

[dev-dependencies]
mock-anthropic-service = { path = "../mock-anthropic-service" }
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread"] }

